--- a/machine-learning/finding_donors/finding_donors.ipynb
+++ b/machine-learning/finding_donors/finding_donors.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -947,23 +947,39 @@
    "source": [
     "### Answer:\n",
     "\n",
-    "Ensemble method Gradient Boosting algorithm is a tree based algorithm. Tree based means its working mechanisim like the 20 Questions Guessing Game. Boosting means combining the results from weak learners (1 tree is considered weak learner) together.\n",
+    "Ensemble method Gradient Boosting algorithm is a DT (Decision Tree) based algorithm. DT working mechanisim is very similar to the 20 Questions Guessing Game. To explain how DT works, Lets assume a very simple example. Netflix company wants to understand their users' movie type (action, romantic, drama) preferences. Netflix dataset contains two features only about users which are gender and age. The DT will start training by asking questions that maximize the separating of data according to their labels (movie preference in this case). After checking the data, DT finds that the best feature separate users is gender and the question DT used is \"if age is less than 25 then users like action or romantic else they like drama\". So DT will use this question as its first node (rule) in the tree. For users who answered no to the previous question, DT will not need to investigate their features anymore as the label is already found. But for users who answered yes, DT will keep training to find their preference. After checking which feature separate the users whose age is less than 25, DT finds that gender is the best feature and the question is if gender is male then users like action else then movie type is romantic. So, DT will add this question as the second node to check users who answered yes to the first question. To here DT stops the training as it finds the underlying relationship that best describe users movies preferences.\n",
+    "\n",
+    "However in reality data is very messy and the underlying relationship is very complicated. So, there is no simple solution as in the previous example by using only one tree. Here the role of Boosting come to play. Boosting means combining the results from many weak learners (1 tree is considered weak learner) together. Gradient Boosting add trees to its ensemble in aditive way. This mean each training iteration is used to add a new tree.\n",
     "    \n",
-    "    1- After the intial training using the training data, Gradient Boosting will build a set of small trees that describe the underlying unkown function of the data. \n",
+    "Training: \n",
+    "\n",
+    "    1- Give an equal weight of importance to all training samples\n",
     "    \n",
-    "    2- Each small tree is considered a weak learner that can find the solution to samples with specific features values.\n",
+    "    2- Find DT that best describes the data according the importance of the training samples.\n",
     "    \n",
-    "    2- When predicting on test data, Gradient Boosting will generate answers from each of its weak learners.\n",
+    "    3- Add the DT to the GB and check the performance of GB.\n",
     "    \n",
-    "    3- Gradient Boosting will combine these answers using the voting rule.\n",
+    "    4- If the performance did not enhance then remove it else:\n",
+    "        a- keep the DT in GB\n",
+    "        b- increase the weight for samples missclassified and decrease the weight for samples correctly classified. This will help the next DT to focus more on hard to classify samples.\n",
     "    \n",
-    "    4- The class label that get the majority of votes will be selected as the class label for the test sample.\n",
+    "    5- if the number of iterations is reached or adding more DT make no effect on improving the performance then stop else go to step 2\n",
+    "   \n",
+    "Testing:\n",
+    "    \n",
+    "    1- When predicting on test data, Gradient Boosting will generate answers from each of its weak learners.\n",
+    "    \n",
+    "    2- Gradient Boosting will combine these answers using the voting rule.\n",
+    "    \n",
+    "    3- The class label that get the majority of votes will be selected as the class label for the test sample.\n",
     "\n",
     "\n",
     "My Answer is based on the following references\n",
     "1- https://www.analyticsvidhya.com/blog/2015/11/quick-introduction-boosting-algorithms-machine-learning/\n",
     "2- https://www.quora.com/What-is-Gradient-Boosting-Models-and-Random-Forests-using-layman-terms\n",
-    "3- https://www.quora.com/What-is-an-intuitive-explanation-of-Gradient-Boosting\n"
+    "3- https://www.quora.com/What-is-an-intuitive-explanation-of-Gradient-Boosting\n",
+    "4- https://xgboost.readthedocs.io/en/latest/model.html\n",
+    "5- http://tullo.ch/articles/gradient-boosted-decision-trees-primer/\n"
    ]
   },
   {
