--- a/machine-learning/customer_segments/customer_segments.ipynb
+++ b/machine-learning/customer_segments/customer_segments.ipynb
@@ -2478,16 +2478,17 @@
     "\n",
     "#### A/B test\n",
     "\n",
-    "My recommendation is to run 4 A/B test across 4 weeks on 20% of customers.\n",
-    "The reason is to remove any days bias such as holidays. The following procedure should be followed:\n",
+    "My recommendation is to run 8 A/B tests across 4 weeks on 80% of customers. Each week, 2 A/B tests will be conducted. The reason is to remove any days bias such as holidays and also to minimize the loss in case of negative feedback by spreading tests on small percentage of customers at time. \n",
     "\n",
-    "    1- Each week take  take a randomly 10% of customers that is not used in previous tests and make sure it is equally distributed across clusters. \n",
+    "Each week, two separate A/B tests are implemented. One test is implemented on customers who belong to Seg1 and the other test is implemented on customers who belong to Seg2. The following procedure should be followed with each test:\n",
+    "\n",
+    "    1- Take a randomly 20% of customers from the specified segment. The selected samples should not be used in previous tests. \n",
     "    \n",
-    "    2- Divide the 10% set in half and make sure each small subset is equally distributed. The first set will serve as the Control set where the service will not change and the second set will serve as the Experimental set where we will test the change of service. \n",
+    "    2- Divide the 20% set in half. The first half will serve as the Control set where the service will not change. The second half will serve as the Experimental set where we will test the change of service. \n",
     "    \n",
-    "    3- Analyze the results from Control and Experiments sets. Check the percentage of negative feedback from both group. Identify which cluster the customers of negative feedback belong to. \n",
+    "    3- After finishing the test, analyze the results from Control and Experiments sets. Identify the effect the service change had on the used customers' segment. \n",
     "    \n",
-    "    After finishing the 4 A/B tests, average the results. The decision should be made on which group will react positivly to the change. In implementing the new change, I would recommend it to be gradual on each 10% of customers and to analyze the results to check if any hidden variable missed by the A/B tests."
+    "After finishing the 8 A/B tests, aggregate the results for each customer segment separately. The decision should be made on which group will react positivly to the change. In implementing the new change, I would recommend it to be gradual on each 10% of customers and to analyze the results to check if any hidden variable missed by the A/B tests."
    ]
   },
   {
